# resinsim

./: .gitignore  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  rustc-ice-2026-04-22T14_43_09-75229.txt  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.swamp/: _extension_catalog.db-shm  _extension_catalog.db-wal
.swamp/audit/: commands-2026-04-16.jsonl  commands-2026-04-17.jsonl
agent-constraints/: implementation-conventions.md
crates/resinsim-core/: Cargo.toml
crates/resinsim-core/src/: lib.rs
crates/resinsim-core/src/app/: build_simulation.rs  formatters.rs  mod.rs  report_generator.rs  simulation_runner.rs
crates/resinsim-core/src/entities/: failure_event.rs  layer_result.rs  mod.rs  printer_profile.rs  recipe.rs  resin_profile.rs
crates/resinsim-core/src/io/: athena.rs  ctb.rs  geometry.rs  mod.rs  nanodlp.rs  sliced.rs  stl.rs
crates/resinsim-core/src/repositories/: mod.rs  printer_repo.rs  resin_repo.rs  simulation_repo.rs
crates/resinsim-core/src/repositories/sidecar/: decoder.rs  encoder.rs  error.rs  format.rs  mod.rs
crates/resinsim-core/src/services/: build_plate.rs  cavity_detector.rs  crack_propagator.rs  cure_calculator.rs  failure_predictor.rs  force_comparator.rs  force_series_extractor.rs  layer_timing_calculator.rs  light_crosstalk_calculator.rs  mod.rs  pairing_validator.rs  peel_force_calculator.rs  profile_calibrator.rs  shrinkage_calculator.rs  stress_accumulator.rs  suction_detector.rs  support_analyzer.rs  thermal_calculator.rs  thermal_diffusion_solver.rs  uniformity_calculator.rs  voxel_cure_calculator.rs  z_axis_compensator.rs
crates/resinsim-core/src/simulation/: mod.rs  print_simulation.rs
crates/resinsim-core/src/values/: area.rs  crack.rs  cure_depth.rs  cure_field.rs  field_budget.rs  float_range.rs  force.rs  int_range.rs  layer_height_provenance.rs  layer_height_seq.rs  layer_input.rs  layer_mask.rs  layer_phase.rs  mod.rs  photoinitiator_field.rs  strain_field.rs  strain_tensor.rs  stress_field.rs  stress_tensor.rs  thermal.rs  thermal_field.rs
crates/resinsim-core/tests/: build_plate_properties.rs  cavity_detector.proptest-regressions  cavity_detector.rs  crack_propagation_runner.rs  ctb_layer_height_authority.rs  cure_properties.rs  force_comparator_golden.rs  force_properties.proptest-regressions  force_properties.rs  kb_golden_values.rs  kb_validation.proptest-regressions  kb_validation.rs  layer_timing_properties.rs  mars5_ultra_led_case_anchoring.rs  mars5_ultra_thermal_integration.rs  migration_completeness.rs  nanodlp_real_sample.rs  nextest_filter_sanity.rs  sidecar_roundtrip_integration.rs  sidecar_security_integration.rs  sim_json_schema_parity.rs  sim_summary_time_integration.rs  sim_summary_time_properties.rs  simulation_repo_round_trip.proptest-regressions  simulation_repo_round_trip.rs  simulation_runner_edge_cases.rs  suction_detector_integration.rs  suction_properties.rs  thermal_properties.rs  uat_extractor.rs  uat_gherkin.rs  uniformity_properties.rs  voxel_cure_crosstalk_integration.rs  voxel_cure_integration.rs  voxel_cure_thermal_field_integration.rs  voxel_strain_stress_integration.rs  z_axis_properties.rs
crates/resinsim-core/tests/fixtures/: bomb-dimensions.nanodlp  mini.nanodlp
crates/resinsim-core/tests/uat/: cure-depth-nan-guard.feature  safety-factor-zero-force.feature
crates/resinsim-core/tests/uat_steps/: cli_fixtures.rs  cli_profile_by_name_loading.rs  cli_requires_resin_for_recipe_fields.rs  cli_temperature_flag_validation.rs  ctb_layer_height_authority.rs  cure_depth_nan_guard.rs  extract.rs  extract_tests.rs  fixtures.rs  legacy_resin_toml_defaults.rs  legacy_resin_toml_without_recipe.rs  legacy_resin_toml_without_ref_lift_speed.rs  mod.rs  recipe_inside_printer_range.rs  recipe_out_of_range.rs  resin_switch_changes_simulation.rs  safety_factor_zero_force.rs  suction_detector_raft_false_positive.rs  thermal_degradation.rs  world.rs
crates/resinsim-inspect/: Cargo.toml  README.md
crates/resinsim-inspect/src/: main.rs  profile_loader.rs
crates/resinsim-inspect/tests/: profile_loader_cli.rs  report_health_time_cli.rs  sim_golden.rs  thermal_cli_warnings.rs
crates/resinsim-inspect/tests/fixtures/: report_health_athena_ii.json.golden  report_health_athena_ii.text.golden
crates/resinsim-inspect/tests/fixtures/sim_golden/: baseline.sim.json  single_layer.sim.json  zero_layers.sim.json
crates/resinsim-viz/: Cargo.toml  README.md
crates/resinsim-viz/examples/: synth_sim_from_ctb.rs  viz_v2_spike.rs
crates/resinsim-viz/src/: data_dir.rs  heatmap.rs  main.rs  mesh.rs  profile_repos.rs  scene.rs  screenshot.rs  sim.rs  slice.rs
crates/resinsim-viz/src/ui/: mod.rs  panels.rs  plots.rs  state.rs
crates/resinsim-viz/src/ui/v2/: failures_rail.rs  grid.rs  layout_persist.rs  mod.rs  pane.rs  readout.rs  scrubber.rs  summary.rs  theme.rs  zoom.rs
crates/resinsim-viz/src/ui/v2/panes/: area_delta.rs  cure_depth.rs  empty_slot.rs  forces.rs  layer_mask_2d.rs  mod.rs  safety.rs  vat_temp.rs  viscosity.rs  z_deflection.rs
crates/resinsim-viz/tests/: lilith_fixture.rs
crates/resinsim-viz/tests/fixtures/: lilith-torso-elegoo-grey-30um.sim.json  lilith-torso-elegoo-grey-50um.sim.json  lilith-torso.sim.json
data/: test_cube.stl  test_cube_10mm.ctb.README.md  test_cube_50mm.stl  test_cube_60mm.stl
data/elegoo/: README.md  kitchen_temperature_dec_jan_hourly.csv  roden_uv_led_temp_dec_jan_hourly.csv
data/printers/: athena_ii.toml  elegoo_mars5_ultra.toml  generic_msla_4k.toml
data/resins/: elegoo_ceramic_grey_v2.toml  generic_abs_like.toml  generic_standard.toml  liqcreate_premium_black.toml
docs/adr/: 0001-ddd-layer-dependency-rule.md  0002-option-not-sentinel-for-absent-values.md  0003-unwrap-policy.md  0004-cli-profile-loading.md  0005-three-axis-printer-resin-recipe.md  0006-ambient-boundary-policy-for-cavity-detection.md  0007-led-and-vat-as-separate-temperatures.md  0008-bdd-uat-spike-notes.md  0009-repositories-vs-io-placement.md  0010-resinsim-viz-presentation-layer.md  0011-egui-control-panels.md  (+13 more)
spec/: EXPERIMENT-PLAN-v1.1.md  viz-v2-design-brief.md
(+243 files in other folders)
