[package]
name = "resinsim-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
rayon = "1.10"
csv = "1.3"
stl_io = "0.8"
aes = "0.8"
cbc = "0.1"
bitvec = "1.0"

[dev-dependencies]
proptest = "1.9.0"
approx = "0.5"

[lints]
workspace = true
