[package]
name = "resinsim-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
rayon = "1.10"
csv = "1.3"
stl_io = "0.8"
aes = "0.8"
cbc = "0.1"
bitvec = "1.0"
ndarray = { version = "0.16", optional = true }

[features]
field-sim = ["dep:ndarray"]

[dev-dependencies]
proptest = "1.9.0"
approx = "0.5"
cucumber = "0.22.1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
pulldown-cmark = { version = "0.13.3", default-features = false }
boon = "=0.6.1"

[[test]]
name = "uat_gherkin"
harness = false

[lints]
workspace = true
