[package]
name = "resinsim-inspect"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "resinsim"
path = "src/main.rs"

[dependencies]
resinsim-core = { path = "../resinsim-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[features]
# Forwarding feature: enabling on this crate cascades to resinsim-core's
# field-sim feature, which gates the voxel cure path (ADR-0017, t2f1).
# Default builds remain lean (no ndarray dep, no voxel modules compiled).
field-sim = ["resinsim-core/field-sim"]

[dev-dependencies]
proptest = "1.9.0"
tempfile = "3"

[lints]
workspace = true
