[package]
name = "resinsim-viz"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "resinsim-viz"
path = "src/main.rs"

[dependencies]
resinsim-core = { path = "../resinsim-core" }
bevy = { version = "0.18", default-features = true }
bevy_panorbit_camera = "0.34"
# bevy_egui 0.39 (egui 0.33) ↔ egui_plot 0.34 — verified version chain.
# bevy_egui 0.39 deprecates `enable_multipass_for_primary_context`; use
# `EguiPlugin::default()`. egui_plot 0.34 targets egui 0.33; 0.33 would
# target egui 0.32 (off-by-one). See ADR-0011.
bevy_egui = "0.39"
egui_plot = "0.34"
clap = { version = "4", features = ["derive"] }
# Pass 5 layout persistence: serde the v2 PaneGrid layout to a JSON
# file under the user's per-app config dir. `directories` resolves
# the platform-correct path (~/Library/Application Support/... on
# macOS); serde + serde_json handle the on-disk shape. All three are
# small, stable, no-cfg deps.
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Tempdir TOML round-trips for issue 04's pairing-violation +
# save/load-sim tests, and the Pass 5 v2 layout-persistence tests.
tempfile = "3"

[lints]
workspace = true
